WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307171
Anchor positioning: abspos elements can anchor to viewport-fixedpos elements
https://bugs.webkit.org/show_bug.cgi?id=307171
Summary
Anchor positioning: abspos elements can anchor to viewport-fixedpos elements
David Shin
Reported
2026-02-06 08:51:41 PST
Created
attachment 478269
[details]
Minimum Reproducible Case (Discovered from Firefox bug:
https://bugzilla.mozilla.org/show_bug.cgi?id=2014997
) Given that: 1. The initial fixed containing block is the parent of the initial containing block in the containing block chain [1], 2. Absolute containing block can have at most the initial containing block as its absolute containing block, 3. And an acceptable anchor should be strictly laid out before the positioned element [2], Strictly spec-wise, fixed elements (Using the initial fixed containing block) should not be a valid anchor for an absolute positioned element in the testcase. Perhaps relatedly - the positioned element doesn't seem to be properly scroll (un?)compensated. [1]
https://drafts.csswg.org/css-position-3/#def-cb
[2]
https://drafts.csswg.org/css-anchor-position-1/#acceptable-anchor-element
Attachments
Minimum Reproducible Case
(406 bytes, text/html)
2026-02-06 08:51 PST
,
David Shin
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-13 08:52:10 PST
<
rdar://problem/170323196
>
pascoe@apple.com
Comment 2
2026-03-12 11:08:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60480
David Shin
Comment 3
2026-03-12 11:12:01 PDT
There's a proposed spec change to in fact get rid of the special fixed ICB, which would allow this behaviour:
https://github.com/w3c/csswg-drafts/issues/13468
fantasai
Comment 4
2026-06-01 16:31:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66208
EWS
Comment 5
2026-06-06 12:54:25 PDT
Committed
314706@main
(fe7bcd9ee8c2): <
https://commits.webkit.org/314706@main
> Reviewed commits have been landed. Closing PR #66208 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug