Anchor Positioning: reject viewport-fixed elements as anchors for abspos elements https://bugs.webkit.org/show_bug.cgi?id=307171 rdar://170323196

Reviewed by NOBODY (OOPS!).

Per the CSS Positioned Layout spec, a viewport-fixed element (position: fixed
with the viewport as its containing block) uses the "initial fixed containing
block", which is conceptually the parent of the initial containing block in the
containing block chain. An absolutely-positioned element's containing block
chain can reach at most the initial containing block (viewport), never the
initial fixed containing block above it.

Therefore, a viewport-fixed anchor element is never "strictly laid out before"
a non-viewport-fixed anchored element in the same top layer, making it an
unacceptable anchor per the CSS Anchor Positioning spec.

The bug manifested because WebKit's container() method returns the viewport
(RenderView) for both viewport-fixed elements and abspos elements with no
positioned ancestor. Since both resolve to the same RenderElement,
penultimateContainingBlockChainElement() would find the fixed anchor in the
chain and firstChildPrecedesSecondChild() could incorrectly accept it based
on DOM tree order alone.

Fix: Add an early-exit check in isAcceptableAnchorElement() within the
TopLayerStatus::Same case: if the anchor is viewport-fixed but the anchored
element is not, reject the anchor.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
  (isAcceptableAnchorElement): Reject viewport-fixed anchors when the
  anchored element is not viewport-fixed, modeling the spec's containing
  block hierarchy where the initial fixed CB is above the initial CB.
* LayoutTests/fast/css/css-anchor-position/abspos-cannot-anchor-to-viewport-fixed.html: Added.
* LayoutTests/fast/css/css-anchor-position/abspos-cannot-anchor-to-viewport-fixed-expected.txt: Added.